# tinycomments

./: .gitignore  Cargo.toml  SECURITY.md  comments.html  theme.toml  tinycomments.js  tinycomments.schema  tinycomments.service
assets/js/: tinycomments.js
layouts/partials/: comments.html
server/: Cargo.toml  config.toml  tinycomments.schema
server/src/: config.rs  email.rs  main.rs  pow.rs
src/: main.rs
