[package]
name = "tinycomments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
ammonia = "3.3"
base64 = "0.21"
chrono = "0.4"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
serde = { "version" = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
sqlite = "0.32.0"
tracing = "0.1"
tracing-subscriber = "0.3"
